<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    android:id="@+id/lesson_card_view"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/exercise_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <View
            android:id="@+id/exrc_sep"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            app:layout_constraintTop_toBottomOf="@id/exercise_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/exercise_desc"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/exrc_sep"/>

        <TextView
            android:id="@+id/tv_time_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/exercise_time_to_complete"
            app:layout_constraintTop_toBottomOf="@id/exercise_desc"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_time_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="160 sec."
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exercise_desc"/>

        <TextView
            android:id="@+id/tv_difficulty_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/exercise_difficulty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time_hint"/>

        <TextView
            android:id="@+id/tv_difficulty_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Hard"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time_set"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exercise_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_difficulty_set"
            android:text="@string/exercise"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_difficulty_set"
            android:text="@string/answer"
            android:id="@+id/exercise_answer_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/exercise_task_btn"
            app:layout_constraintRight_toLeftOf="@id/exercise_answer_btn"
            app:layout_constraintTop_toBottomOf="@id/tv_difficulty_set"
            android:text="@string/save"
            android:id="@+id/exercise_save_btn"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
